feat: add "Excluded path suggestion globs" preference option